# final-project-Sriram-Y

./: .gitignore  CMakeLists.txt  Makefile  README.md  audio_processing.c  audio_processing.h  audioeqdriver  audioeqdriver.c  gains.txt
include/: audio_processing.h
scripts/: audioeqdriver-start-stop.sh
src/: audio_processing.c  main.c
test/: Makefile  main  main.c
